# grman_project_2

./: .gitignore  CHANGELOG.org  README.md  example_config.json  meson.build  meson_options.txt
doc/: _main.tex  algorithmus.tex  bedienung.tex  einleitung.tex  implementierung.tex  literatur.bib
include/: client.h  config.h  database.h  exit_code.h  file_operations.h  file_operator.h  internal_msg.h  json_utils.h  message_utils.h  pipe.h  server.h  sync_utils.h  utils.h
include/channel/: pipe.h
include/file_operator/: filesystem.h  message_utils.h  operator_utils.h  signatures.h  sync_system.h  sync_utils.h
include/messages/: basic.h
include/pipe/: basic_pipe.h  no_pipe.h
include/presentation/: command_line.h  format_utils.h  logger.h  logger_config.h
include/presentation/logger/: basic_logger.h  chain_logger.h  no_logger.h
include/type/: definitions.h  error.h  result.h  sequence.h
include/unit_tests/: doctest_utils.h
messages/: all.proto  basic.proto  download.proto  general.proto  info.proto  sync.proto  test.proto
src/: client.cpp  config.cpp  database.cpp  file_operations.cpp  file_operator.cpp  main.cpp  message_utils.cpp  server.cpp  sync_utils.cpp  utils.cpp
src/channel/: pipe.cpp
src/file_operator/: filesystem.cpp  message_utils.cpp  operations.cpp  operator_utils.cpp  signatures.cpp  sync_system.cpp  sync_utils.cpp
src/pipe/: basic_pipe.cpp
src/presentation/: command_line.cpp  format_utils.cpp  logger.cpp  logger_config.cpp
src/unit_tests/: json_utils.cpp  main.cpp  operator_utils.cpp  pipe.cpp  signatures.cpp  sync_utils.cpp  type.cpp  utils.cpp
