option('asio_include_dir',    type : 'string', value : '/usr/include',     description : 'the include dir of asio')
option('cli11_include_dir',   type : 'string', value : '/opt/cpp_include', description : 'the dir containing CLI11.hpp')
option('doctest_include_dir', type : 'string', value : '/opt/cpp_include', description : 'the include dir of doctest')
option('fmt_include_dir',     type : 'string', value : '/opt/cpp_include', description : 'the include dir of fmt')
option('json_include_dir',    type : 'string', value : '/opt/cpp_include', description : 'the include dir of json')
option('peglib_include_dir',  type : 'string', value : '/opt/cpp_include', description : 'the dir containing peglib.h')
option('spdlog_include_dir',  type : 'string', value : '/opt/cpp_include', description : 'the include dir of spdlog')
option('toml_include_dir',    type : 'string', value : '/opt/cpp_include', description : 'the include dir of toml++')
