option('asio_include_dir',       type : 'string', value : '/usr/include',     description : 'the include dir of asio.hpp')
option('cli11_include_dir',      type : 'string', value : '/opt/cpp_include', description : 'the dir containing CLI11.hpp')
option('doctest_include_dir',    type : 'string', value : '/opt/cpp_include', description : 'the include dir of doctest.h')
option('fmt_include_dir',        type : 'string', value : '/opt/cpp_include', description : 'the include dir of fmt')
option('json_include_dir',       type : 'string', value : '/opt/cpp_include', description : 'the include dir of json.hpp')
option('peglib_include_dir',     type : 'string', value : '/opt/cpp_include', description : 'the dir containing peglib.h')
option('spdlog_include_dir',     type : 'string', value : '/opt/cpp_include', description : 'the include dir of spdlog')
option('sqlite_orm_include_dir', type : 'string', value : '/opt/cpp_include', description : 'the dir containing sqlite_orm')
